--- a/themes/white_cloud/templates/base.html
+++ b/themes/white_cloud/templates/base.html
@@ -28,6 +28,7 @@
         {% if TAG_FEED_RSS and tag %}
         <link href="{{ FEED_DOMAIN }}/{% if TAG_FEED_RSS_URL %}{{ TAG_FEED_RSS_URL.format(slug=tag.slug) }}{% else %}{{ TAG_FEED_RSS.format(slug=tag.slug) }}{% endif %}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} Tags RSS Feed" />
         {% endif %}
+        <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/main.css" />
         {% endblock head %}
 </head>
 
