--- a/themes/white_cloud/templates/base.html
+++ b/themes/white_cloud/templates/base.html
@@ -59,5 +59,9 @@
                 which takes great advantage of <a href="http://python.org">Python</a>.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
+  
+  <link rel="stylesheet" href="theme/css/main.css">
+  <link rel="stylesheet" href="theme/css/monokai.css">
+  <script src="theme/JSHightlight/highlight.pack.js"></script>
 </body>
 </html>
