--- a/themes/white_cloud/templates/index.html
+++ b/themes/white_cloud/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 <section id="content">
 {% block content_title %}
-<h2>All articles</h2>
+<!-- <h2>Tous les articles</h2> -->
 {% endblock %}
 
 <ol id="post-list">
