--- a/themes/white_cloud/static/scss/_global.scss
+++ b/themes/white_cloud/static/scss/_global.scss
@@ -74,6 +74,10 @@ article {
     padding: 1.5%;
 }
 
+.entry-title {
+    font-weight: bold;
+}
+
 .hentry {
     display: flex;
     flex-direction: row;
